[tool.poetry]
name = "legends_io_flask"
version = "0.1.0"
description = "A Flask project for Legends.io"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
